5469.	[port]		illumos: SEC is defined in <sys/time.h> which
			conflicted with our use of SEC. [GL #1993]

5468.	[bug]		Address potential double unlock in process_fd().
			[GL #2005]

5467.	[func]		The control channel and the rndc utility have been
			updated to use the new network manager. To support
			this, the network manager was updated to enable
			wthe initiation of client TCP connections. Its
			internal reference counting has been refactored.

			Note: As side effects of this change, rndc cannot
			currently be used with UNIX-domain sockets, and its
			default timeout has changed from 60 seconds to 30.
			These will be addressed in a future release.
			[GL #1759]

5466.	[bug]		Addressed an error in recursive clients stats reporting.
			[GL #1719]

5465.	[func]		Fallback to built in trust-anchors, managed-keys, or
			trusted-keys if the bindkeys-file (bind.keys) cannot
			be parsed. [GL #1235]

5464.	[bug]		Specifying saving more than 128 files when rolling
			dnstap / log files would cause buffer overflow.
			[GL #1989]

5463.	[placeholder]

5462.	[bug]		Move LMDB locking from LMDB itself to named. [GL #1976]

5461.	[bug]		The header STALE attribute was not being updated with
			the write lock being held leading to incorrect
			statistics.  Convert the header attributes to use atomic
			operations. [GL #1475]

5460.	[cleanup]	tsig-keygen was previously an alias for
			ddns-confgen and was documented in the ddns-confgen
			man page. This has been reversed; tsig-keygen is
			now the primary name. [GL #1998]

5459.	[bug]		Bad isc_mem_put() size when an invalid type was
			specified in a update-policy rule. [GL #1990]

5458.	[bug]		Prevent a theoretically possible NULL dereference caused
			by a data race between zone_maintenance() and
			dns_zone_setview_helper(). [GL #1627]

5457.	[placeholder]

5456.	[func]		Added "primaries" as a synonym for "masters" in
			named.conf, and "primary-only" as a synonym for
			"master-only" in the parameters to "notify",