@@ -1,3 +1,6 @@
+5470.	[port]		illumos: only call gsskrb5_register_acceptor_identity
+			if we have gssapi_krb5.h. [GL #1995]
+
 5469.	[port]		illumos: SEC is defined in <sys/time.h> which
 			conflicted with our use of SEC. [GL #1993]
 
